manifests/manifests/python-webrtc-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plarail2021-soft-python
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: plarail2021-soft-python
  template:
    metadata:
      labels:
        app: plarail2021-soft-python
    spec:
      containers:
        - name: plarail2021-soft-python
          image: ghcr.io/ueckoken/plarail2021-soft-frontend-python:7ef455f-1636819022 # {"$imagepolicy": "plarail2021:frontend-python"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
