manifests/manifests/python-webrtc-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plarail2021-soft-python
  namespace: plarail2021
spec:
  type: NodePort
  selector:
    app: plarail2021-soft-python
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
